crates/wac-parser/tests/resolution/fail/mismatched-flags/foo/bar.wat
(component
  (instance (import "x")
    (type (flags "a" "b" "c"))
    (export "f" (type (eq 0)))
  )
)
